# HPC_LAB

./: README.md  size_var  size_var.c
lab01/bastien_pillonel/code/src/: Makefile  image.c  sobel.c
lab01/bastien_pillonel/report/: report.md
lab01/code/src/: .~lock.Graphe.ods#  lab01  sobel.c  time_meas.sh
lab02/code/src/: HPC_LAB2_CI.txt  HPC_LAB2_INSTR.txt  HPC_LAB2_MEM.txt  Makefile  lab01  main.c  meas.sh  sobel.c
lab02/code/src/perf_meas/: instr_meas_half_life1.txt  instr_meas_half_life2.txt  instr_meas_medaillon1.txt  instr_meas_medaillon2.txt  instr_meas_nyc1.txt  instr_meas_nyc2.txt  mem_meas_half_life1.txt  mem_meas_half_life2.txt  mem_meas_medaillon1.txt  mem_meas_medaillon2.txt  mem_meas_nyc1.txt  mem_meas_nyc2.txt
lab02/report/: report.md
lab02/script/: input.txt  roofline_gen.py
lab03/: report.md
lab03/code/include/: sobel.h
lab03/code/src/: Graphe.ods  HPC_LAB3_TIME.txt  lab01  main.c
lab03/rendu_lab3_pillonel/: report.md
lab03/rendu_lab3_pillonel/code/src/: hp_basic_bench.md  lab01  main.c  sobel.c  time_result.md
lab03/rendu_lab3_pillonel/lib/: setup.sh
lab04/code/: CMakeLists.txt  time_measure_edge_simd.txt  time_measure_init.txt  time_measure_vect_malloc_opti.txt
lab04/code/include/: image.h  sobel.h
lab04/code/src/: image.c  k-means.c  main_segmentation.c  main_sobel.c  sobel.c
lab04/rendu_lab04_pillonel/code/: time_measure_ftree_vect.txt
lab04/rendu_lab04_pillonel/code/include/: k-means.h
lab04/rendu_lab04_pillonel/code/src/: k-means.c  main_segmentation.c
lab05/: report.md
lab06/: report.md
lab06/code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  meas.sh  meas_likwid_global.sh  meas_likwid_marker.sh  meas_perf_global.sh  meas_perf_marker.sh  power_global_perf_nonv.txt  power_global_perf_vect.txt  power_marker_likwid_nonv.txt  segmentation  segmentation_likwid  segmentation_perf  time_measure_edge.txt  time_measure_kmeanpp_vect.txt
lab06/code/include/: image.h
lab06/code/src/: k-means.c  main_segmentation.c  main_segmentation_likwid.c  main_segmentation_perf.c  main_segmentation_powercap.c  main_sobel.c
lab06/code/src/powercap/: CMakeCache.txt  Makefile  cmake_install.cmake
lab06/rendu_lab04_pillonel/: report.md
lab06/rendu_lab04_pillonel/code/: CMakeLists.txt  edge_measure.sh
lab06/rendu_lab04_pillonel/code/src/: sobel.c
